# RestaurantManagementSystem

./: .gitignore  BUILD_AND_RUN.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Dockerfile  README.md  SIMULATION_MODE.md
include/controllers/: ChefController.h  MenuController.h  OrderController.h  PaymentController.h  QueueController.h  ReservationController.h  RoleController.h  StatisticsController.h  UserController.h
include/database/: DatabaseConnection.h  DatabaseMigration.h  DatabaseSeeder.h  QueryBuilder.h
include/dto/: LoginRequestDTO.h  MenuItemDTO.h  OrderRequestDTO.h  ReservationDTO.h  StatisticsDTO.h
include/enums/: ChefStatus.h  ChefType.h  OrderStatus.h  OrderType.h  PaymentMethod.h  PaymentStatus.h  ReservationStatus.h  TableStatus.h
include/gui/: AdminLogView.h  ChefView.h  DashboardWindow.h  LoginWindow.h  MainWindow.h  MenuView.h  OrderQueueView.h  OrderView.h  PaymentView.h  ReservationView.h  StatisticsView.h  TableView.h
include/models/: AccessScope.h  AdminActionLog.h  Chef.h  Event.h  Ingredient.h  MenuItem.h  Order.h  OrderItem.h  OrderQueue.h  Payment.h  Permission.h  Reservation.h  Role.h  Statistics.h  Table.h  User.h
include/repositories/: AccessScopeRepository.h  AdminActionLogRepository.h  ChefRepository.h  EventRepository.h  IngredientRepository.h  MenuItemRepository.h  OrderItemRepository.h  OrderQueueRepository.h  OrderRepository.h  PaymentRepository.h  PermissionRepository.h  ReservationRepository.h  RoleRepository.h  StatisticsRepository.h  TableRepository.h  UserRepository.h
include/services/: AuthService.h  ChefService.h  MenuService.h  OrderService.h  PaymentService.h  ReservationService.h  StatisticsService.h  TableService.h
include/simulation/: ArrivalEvent.h  CancelEvent.h  Event.h  PromoteEvent.h  SimulationEngine.h
include/utils/: JsonSerializer.h  Logger.h  PriceCalculator.h  PriorityCalculator.h  RandomUtils.h  SimulationMode.h  TimeUtils.h
src/: main.cpp
src/controllers/: ChefController.cpp  MenuController.cpp  OrderController.cpp  PaymentController.cpp  QueueController.cpp  ReservationController.cpp  RoleController.cpp  StatisticsController.cpp  UserController.cpp
src/database/: DatabaseConnection.cpp  DatabaseMigration.cpp  DatabaseSeeder.cpp  QueryBuilder.cpp
src/gui/: AdminLogView.cpp  ChefView.cpp  DashboardWindow.cpp  LoginWindow.cpp  MainWindow.cpp  MenuView.cpp  OrderQueueView.cpp  OrderView.cpp  PaymentView.cpp  ReservationView.cpp  StatisticsView.cpp  TableView.cpp
src/models/: AccessScope.cpp  AdminActionLog.cpp  Chef.cpp  Event.cpp  Ingredient.cpp  MenuItem.cpp  Order.cpp  OrderItem.cpp  OrderQueue.cpp  Payment.cpp  Permission.cpp  Reservation.cpp  Role.cpp  Statistics.cpp  Table.cpp  User.cpp
src/repositories/: AccessScopeRepository.cpp  AdminActionLogRepository.cpp  ChefRepository.cpp  EventRepository.cpp  IngredientRepository.cpp  MenuItemRepository.cpp  OrderItemRepository.cpp  OrderQueueRepository.cpp  OrderRepository.cpp  PaymentRepository.cpp  PermissionRepository.cpp  ReservationRepository.cpp  RoleRepository.cpp  StatisticsRepository.cpp  TableRepository.cpp  UserRepository.cpp
src/services/: AuthService.cpp  ChefService.cpp  MenuService.cpp  OrderService.cpp  PaymentService.cpp  ReservationService.cpp  StatisticsService.cpp  TableService.cpp
src/simulation/: ArrivalEvent.cpp  CancelEvent.cpp  Event.cpp  PromoteEvent.cpp  SimulationEngine.cpp
src/utils/: JsonSerializer.cpp  Logger.cpp  PriceCalculator.cpp  PriorityCalculator.cpp  RandomUtils.cpp  SimulationMode.cpp  TimeUtils.cpp
